[package]
name = "gust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
speedy2d = { version = "1.7.*", default-features = false, features = ["image-loading", "windowing"] }
log = { version = "0.4.14" }
backtrace = "0.3.64"
chrono = "^0.4"
lazy_static = "1.4.0"
image = "0.24.*"
spmc = "^0.3"
wav = "1.0.0"
dashmap = "5.3.4"
glutin = "^0.28"
cgmath = "0.18.0"
paste = "1.0"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
glium = "0.32.1"
rusttype = { version = "0.9.2", features = ["gpu_cache"] }

[target.'cfg(target_os="windows")'.dependencies.winapi]
version = "0.3.9"
features = ["dsound", "synchapi", "winuser"]